welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	def PositionFinale():Boolean{
		(estFaceMur==true && getDirection==Direction.nord)
	}

}
